Fixed errors from Catherine's proof read of cvs

--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -293,7 +293,7 @@
     </figure>
 
     <div class='list'><div class='year'>2003</div> I developed one of the first wikis in the ruby langage (called SOKS). I wrote this in pre-Rails Ruby. It was used for a while by (part of) NASA.</div>
-    <div class='list'><div class='year'>2000</div> I made an early attempt at Electronic Health Records for Cambridge Health Informatics (a now defunct start-up). I developed their system to query GP databases and summarise the information for use in hosptials. I working in Java.</div>
+    <div class='list'><div class='year'>2000</div> I made an early attempt at Electronic Health Records for Cambridge Health Informatics (a now defunct start-up). I developed their system to query GP databases and summarise the information for use in hosptials. I worked in Java.</div>
     <div class='list'><div class='year'>1998</div> I developed one of the early content management systems at Netcentric Solutions (a now defunct start-up) I worked part-time for them while completing my degree. I worked in Java.</div>
   </section>
 
@@ -309,7 +309,7 @@
       <li>I enjoy creating data driven visualisations: e.g.,: a <a href='http://bl.ocks.org/tamc/raw/024168df8660eeca26aa/'>CATES plot</a>, a <a href=''>Marginal Abatement Cost Curve</a>, a '<a href='http://tamc.github.io/flying-brick/'>flying brick</a>' chart, or a  <a href='http://tamc.github.io/Sankey/'>Sankey</a> diagram.</li>
       <li>I like to automate: e.g., I have <a href='https://github.com/decc/calculator-book/tree/master/public'>a script</a> that watches for changes on <a href='https://github.com/decc/calculator-book'>a github repository</a>, combines the files and uses pandoc to spit out the result as <a href='http://book.2050.org.uk'>Word, PDF and HTML</a>.</li>
       <li>I can solve optimization problems: e.g., <a href='https://github.com/decc/twenty-fifty/blob/master/model/optimiser/optimiser.c'>my genetic algorithm solver</a> in C.</li>
-      <li>I have had a go at programming applicaitons: e.g., an iPhone application to help breastfeeding mothers, that I sold on the iPhone app store for a while.</li>
+      <li>I have had a go at programming applications: e.g., an iPhone application to help breastfeeding mothers, that I sold on the iPhone app store for a while.</li>
     </ul>
   </section>
 
@@ -321,7 +321,7 @@
 
   <h3>Finances</h3>
 
-  <p> I have been routinely responsible for budget's of £1&thinsp;million or more. I can do a NPV valuation of a business or project and draw up a simple set of accounts.</p>
+  <p> I have been routinely responsible for budgets of £1&thinsp;million or more. I can do a NPV valuation of a business or project and draw up a simple set of accounts.</p>
 
   <h3>Project Management</h3>
 
