--- a/public/cv.html
+++ b/public/cv.html
@@ -32,19 +32,19 @@
 
 <h3>Deputy Director, Strategy</h3>
 
-<p>I ran a twelve person team that considered what needed to be done to hit the department's long term targets. The team won a Civil Service Award for its ground-breaking approach.</p>
+<p>I ran a twelve person team that considered what needed to be done to meet the department's long term targets. The team won a Civil Service Award for its ground-breaking approach.</p>
 
 <h3>Grade 6, Head of Engineering Team</h3>
 
-<p>I formed and ran the Department of Energy & Climate Change's first central engineering team. This team of ten spanned the engineering disciplines and provided technical advice to the department on carbon capture & storage, bioenergy sustainability, nuclear research, spending to support innovation, the potential for energy demand reduction and the challenges of renewables deployment.</p>
+<p>I formed and ran the Department of Energy &amp; Climate Change's first central engineering team. This team of ten spanned the engineering disciplines and provided technical advice to the department on carbon capture & storage, bioenergy sustainability, nuclear research, spending to support innovation, the potential for energy demand reduction and the challenges of renewables deployment.</p>
 
 <h3>Grade 7, Assistant to the Chief Scientific Advisor</h3>
 
-<p>I was recruited into the UK Deparment of Energy and Climate Change by David MacKay, the Chief Scientific Advisor, to work in his private office. I supported him with counsel, with rapid bits of analysis, in keeping track of initiatives inside and outside of the department and represented him when he was unavailable.</p>
+<p>I was recruited to the UK Deparment of Energy and Climate Change by David MacKay, the Chief Scientific Advisor, to work in his private office. I supported him with counsel, with rapid bits of analysis, in keeping track of initiatives inside and outside of the department and represented him when he was unavailable.</p>
 
 <h2>STRATEGY MANAGER (2007&ndash;2010)</h2>
 
-<p>I was appointed as a strategy associate and then promoted to strategy manager at the Carbon Trust. I managed internal and external staff to create well received publications on climate change topics (four on the EU ETS with Michael Grub, one on the impact of tackling climate change on shareholder value and one on the scale of emissions triggered abroad by UK consumption of goods) and to help the CEO and COO to define elements of the Carbon Trust’s organisation and strategy (for instance, how should the Carbon Trust support other governments in setting up Carbon Trust-like organisations? What could the Carbon Trust do to stimulate a green economic recovery?). I represented the Carbon Trust to industry and to government in the UK and abroad. I kept Carbon Trust staff briefed on policy developments, such the work of the Climate Change Committee, the carbon targets and budgets and the Low Carbon Transition Plan.</p>
+<p>I was appointed as a strategy associate and then promoted to strategy manager at the Carbon Trust. I managed internal and external staff to create well received publications on climate change topics (four on the EU ETS with Michael Grub, one on the impact of tackling climate change on shareholder value and one on the scale of emissions triggered abroad by UK consumption of goods) and to help the CEO and COO to define elements of the Carbon Trust’s organisation and strategy (for example, how should the Carbon Trust support other governments in setting up Carbon Trust-like organisations? What could the Carbon Trust do to stimulate a green economic recovery?). I represented the Carbon Trust to industry and to government in the UK and abroad. I kept Carbon Trust staff briefed on policy developments, such the work of the Climate Change Committee, the carbon targets and budgets and the Low Carbon Transition Plan.</p>
 
 <h2>ENGINEERING RESEARCHER (2003&ndash;2007)</h2>
 <p>I completed a PhD under the supervision of Dr Julian Allwood at the Department of Engineering at the University of Cambridge. I won funding for my research on the basis of my proposal and academic background. My research considered whether it would be possible
@@ -52,7 +52,7 @@ to remove print from paper in a way that would allow used sheets to be fed back 
 
 <h2>ENGINEERING TEACHER (2003&ndash;2007)</h2>
 
-<p>I was appointed as a teaching assistant at the Cambridge University Engineering Department. I led visits, practicals, workshops and educational games for third and fourth year engineering students. I marked essays. I prepared and delivered lectures on, for instance, industrial sustainability, the Toyota Production System, and process mapping. I supervised undergraduate engineers on materials science, on the organisation and control of manufacturing systems and on mathematics.</p>
+<p>I was appointed as a teaching assistant at the Cambridge University Engineering Department. I led visits, practicals, workshops and educational games for third and fourth year engineering students. I marked essays. I prepared and delivered lectures on, for example, industrial sustainability, the Toyota Production System, and process mapping. I supervised undergraduate engineers on materials science, on the organisation and control of manufacturing systems and on mathematics.</p>
 
 <h2>STRATEGY CONSULTANT (2000&ndash;2003)</h2>
 <p>I was appointed as an associate consultant and then promoted to consultant (their post-MBA level) at Marakon Associates. I managed small consulting teams and large groups of clients to answer questions of strategy and organisation. For example: I helped the CEO of a Canadian chocolate business to cut costs; I helped the CEO of an over the counter drugs business to understand the options for the growth, merger or sale of his business; and I helped a wholesale bank to fix its ineffective, multi-country, matrix organisation. My role became one of analytical trouble-shooter sent in to give drifting projects traction. Most work was done overseas.</p>
