--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -70,11 +70,11 @@
 
     /* Now the individual colours, decorations etc */
     body {
-      font-family: "Merriweather", serid;
+      font-family: "Merriweather", serif;
     }
 
     h1, h2, h3 {
-      font-family: "Lato", serif;
+      font-family: "Lato", sans-serif;
       color: #b00;
       font-weight: normal;
       text-transform: uppercase;
@@ -167,6 +167,56 @@
       }
     }
 
+    @media print {
+      /* Change the margins to leave space for the images */
+      #content {
+        width: 100%;
+        margin: 1em 240px 1em 120px;  
+      }
+
+      /* Shrink the text */
+      body {
+        font-size: 0.7em;
+      }
+      
+      /* Reposition the margin items now we have shrunk the text */
+      li:before {
+        top: 0.2em;
+      }
+
+      .year, .heading-year {
+        position: absolute;
+        left: -15em;
+        width: 14em;
+        text-align: right;
+        top: 0.2em;
+        margin: 0;
+        padding: 0;
+      }
+      .heading-year {
+        top: 0.4em;
+      }
+
+      section {
+        /* Encourage the page breaks to be in sensible spots */
+        page-break-inside: avoid;
+        /* So that the figure absolute position is relative to the section */
+        position: relative;
+      }
+
+      figure {
+        margin: 0px;
+        padding: 0;
+        position: absolute;
+        right: -240px;
+        border: solid 1px rgba(255,0,0,0.1);
+      }
+
+      a {
+        color: black;
+      }
+      
+    }
 
       </style>
 </head>
