Renamed finances to money

--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -373,7 +373,7 @@
 
   <p>I have worked as a civil servant, as a strategy consultant, in various engineering roles, as a university teaching assistant and for small start-ups. I have worked on projects in Singapore, Hong Kong, Canada, the USA, the Netherlands and Switzerland.</p>
 
-  <h3>Finances</h3>
+  <h3>Money</h3>
 
   <p> I have been routinely responsible for budgets of £1&thinsp;million or more. I can do a NPV valuation of a business or project and draw up a simple set of accounts.</p>
 
