--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -348,7 +348,7 @@
 
     <div class='list'><div class='year'>2003</div> I developed one of the first wikis in the ruby langage (called SOKS). I wrote this in pre-Rails Ruby. It was used for a while by (part of) NASA.</div>
     <div class='list'><div class='year'>2000</div> I made an early attempt at Electronic Health Records for Cambridge Health Informatics (a now defunct start-up). I developed their system to query GP databases and summarise the information for use in hosptials. I worked in Java.</div>
-    <div class='list'><div class='year'>1998</div> I developed one of the early content management systems at Netcentric Solutions (a now defunct start-up) I worked part-time for them while completing my degree. I worked in Java.</div>
+    <div class='list'><div class='year'>1998</div> I developed one of the early content management systems at Netcentric Solutions (a now defunct start-up). I worked part-time for them while completing my degree. I worked in Java.</div>
   </section>
 
   <section>
