Added link to Wikipedia explanation for flying brick chart

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </script><noscript>&#116;&#x6f;&#x6d;&#32;&#x61;&#116;&#32;&#x63;&#x6f;&#x75;&#110;&#x73;&#x65;&#108;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x6f;&#114;&#x67;</noscript>.</p>
 <h2 id="news">News</h2>
 <ol type="1">
-<li>Created a <a href="http://tamc.github.io/flying-brick/">'flying brick' chart</a>.</li>
+<li>Created a <a href="http://en.wikipedia.org/wiki/Waterfall_chart">'flying brick'</a> <a href="http://tamc.github.io/flying-brick/">chart generator</a> because they are a bit annoying to draw in Excel.</li>
 <li>Together with <a href="https://www.itri.org.tw">ITRI</a> we hosted a conference in Taipei for <a href="http://www.2050.org.uk/#!calculators/cee5">all the countries</a> that are working on 2050 calculators. <a href="http://en.wikipedia.org/wiki/Mao_Chi-kuo">Premier Mao</a> opened the event, and an awesome group of high school children put on a play about the difficulty of agreeing what to do about energy in Taiwan.</li>
 <li>We're writing a <a href="http://book.2050.org.uk">book on how to make a 2050 calculator</a>.</li>
 <li>Some great responses to the launch of our <a href="http://www.globalcalculator.org">Global Calculator</a>. One of my favourites is the headline of the article in the Telegraph: &quot;<a href="http://www.telegraph.co.uk/news/earth/environment/climatechange/11373389/Hate-wind-farms-Eat-chicken.html">Hate wind farms? Eat chicken, not beef</a>.&quot;</li>
