--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
 <figure>
 <img src="tomcounsell.jpg" />
 </figure>
-<p>Hello. I'm an engineer. At the moment I am a Deputy Director at the UK <a href="https://www.gov.uk/government/organisations/department-of-energy-climate-change">Department of Energy and Climate Change</a>. I also do occasional freelance work through <a href="http://www.greenonblack.com">Green on Black Ltd</a>.</p>
-<p>Here are some <a href="/bio.html">words to describe me</a> for use in seminar programmes, posters about talks I am giving etc.</p>
+<p>Hello. I'm an engineer. I live in <a href="https://en.wikipedia.org/wiki/Brighton">Brighton</a> and work at a tiny firm in <a href="https://en.wikipedia.org/wiki/Lewes">Lewes</a> <a href="http://eyfs.info">that helps children's nurseries</a>.</p>
+<p>Before that I [I was a Deputy Director at the UK <a href="https://www.gov.uk/government/organisations/department-of-energy-climate-change">Department of Energy and Climate Change</a>. I also do occasional freelance work through <a href="http://www.greenonblack.com">Green on Black Ltd</a>.</p>
 <p>Perhaps you are looking for information about my:</p>
 <ol type="1">
 <li><a href="view/History.html">History</a></li>
@@ -34,6 +34,9 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </script><noscript>&#116;&#x6f;&#x6d;&#32;&#x61;&#116;&#32;&#x63;&#x6f;&#x75;&#110;&#x73;&#x65;&#108;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x6f;&#114;&#x67;</noscript>.</p>
 <h2 id="news">News</h2>
 <ol type="1">
+<li>I have left DECC. Not because I didn't like DECC. But because I have had enough of commuting from Brighton to London. I'm now working at a tiny local firm <a href="http://eyfs.info">that helps children's nurseries</a>,</li>
+<li>Almost my last act at DECC was to create <a href="https://www.youtube.com/watch?v=OnNwBpre3Lk">short film about how we supply and use energy in the UK</a>. It was based on a talk I gave last year in London.</li>
+<li>I don't like <a href="https://en.wikipedia.org/wiki/Marginal_abatement_cost">Marginal Abatement Cost Curves</a>, but some colleagues at DECC really do. They are also annoying to do in Excel, so I created a <a href="http://tamc.github.io/macc/">chart generator</a> to help them out.</li>
 <li>Created a <a href="http://en.wikipedia.org/wiki/Waterfall_chart">'flying brick'</a> <a href="http://tamc.github.io/flying-brick/">chart generator</a> because they are a bit annoying to draw in Excel.</li>
 <li>Together with <a href="https://www.itri.org.tw">ITRI</a> we hosted a conference in Taipei for <a href="http://www.2050.org.uk/#!calculators/cee5">all the countries</a> that are working on 2050 calculators. <a href="http://en.wikipedia.org/wiki/Mao_Chi-kuo">Premier Mao</a> opened the event, and an awesome group of high school children put on a play about the difficulty of agreeing what to do about energy in Taiwan.</li>
 <li>We're writing a <a href="http://book.2050.org.uk">book on how to make a 2050 calculator</a>.</li>
