Fixed link error

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <img src="tomcounsell.jpg" />
 </figure>
 <p>Hello. I'm an engineer. I live in <a href="https://en.wikipedia.org/wiki/Brighton">Brighton</a> and work at a tiny firm in <a href="https://en.wikipedia.org/wiki/Lewes">Lewes</a> <a href="http://eyfs.info">that helps children's nurseries</a>.</p>
-<p>Before that I [I was a Deputy Director at the UK <a href="https://www.gov.uk/government/organisations/department-of-energy-climate-change">Department of Energy and Climate Change</a>. I also do occasional freelance work through <a href="http://www.greenonblack.com">Green on Black Ltd</a>.</p>
+<p>Before that I was a Deputy Director at the UK <a href="https://www.gov.uk/government/organisations/department-of-energy-climate-change">Department of Energy and Climate Change</a>. I also do occasional freelance work through <a href="http://www.greenonblack.com">Green on Black Ltd</a>.</p>
 <p>Perhaps you are looking for information about my:</p>
 <ol type="1">
 <li><a href="view/History.html">History</a></li>
