--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -248,7 +248,9 @@
       <li><a href='http://www.ruby-lang.org'>Ruby</a> &mdash; I've used this for substantial projects since 2003.</li>
       <li><a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript'>Javascript</a>, <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>html</a> &amp; <a href='https://developer.mozilla.org/en-US/docs/Web/CSS'>css</a> &mdash; Both single-page and client-server web applications.</li>
       <li><a href='http://www.open-std.org/jtc1/sc22/wg14/www/docs/n1570.pdf'>C</a> &mdash; I've written a few high performance routines and interfaced them with Ruby.</li>
-      <li><a href=''>Objective-C</a>, <a href=''>Java</a>, <a href=''>Haskell</a>, <a href=''>Julia</a> &mdash; I have more modest experience of these languages.</li>
+      <li><a href='http://www.android.com'>Java / Android</a> &mdash; I've developed moderately complex Android apps.</a></li>
+      <li><a href='http://www.apple.com/developer'>Objective-C / iOS</a> &mdash; I've developed moderately complex iOS apps.</a></li>
+      <li><a href='http://php.net'>PHP</a> &mdash; I know what I am doing.</a></li>
     </ul>
   </section>
 
@@ -278,25 +280,66 @@
   <h2>Projects delivered</h2>
 
   <section>
+  <div class='heading-year'>2015&ndash;</div>
+    <h3>Tapestry</h3>
+
+    <figure>
+      <a class='image' href='http://tapestry.info'><img src='/Static/tapestry.png' /></a>
+      <figcaption>Tapestry</figcaption>
+    </figure>
+
+    <p>A <a href='http://tapestry.info'>website</a>, <a href=''>Android app</a> and <a href=''>iOS app</a> that children's nurseries use to plan, record and communicate how their charges develop. 7&thinsp;000 nurseries pay for the service and it contains information about 330&thinsp;000 children. The apps have 90&thinsp;000 active users a month, and the site 250&thinsp;000. Written in PHP, Javascript, Java and Objective-C. I have taken over the management of the apps and am contribute to the site.</p>
+
+    <p>Key features:</p>
+
+    <ul>
+      <li>A requirement for high security and uptime.</li>
+      <li>A complex legacy, multi-author codebase.</li>
+    </ul>
+  </section>
+
+
+  <section>
+  <div class='heading-year'>2015</div>
+    <h3>The Global Food and Water System</h3>
+
+    <figure>
+      <a class='image' href='http://gfws.greenonblack.com'><img src='/Static/gfws.png' /></a>
+      <figcaption>The Global Food and Water System</figcaption>
+    </figure>
+
+    <p>An <a href='http://2050-calculator-tool.decc.gov.uk'>interactive site</a> developed for an Australian group that allows people to explore whether 14 countries will have enough food and water under a range of possible futures. Written in Javascript (using D3js), Ruby (using Sinatra), Excel and C. I improved the model and developed the interactive site.</p>
+
+    <p>Key features:</p>
+
+    <ul>
+      <li>A well structured Excel spreadsheet that contains the model and assumptions.</li>
+      <li><a href='http://github.com/tamc/excel_to_code'>Code</a> that takes an Excel spreadsheet and turns it into an equivalent model written in C.</li>
+      <li><a href='http://github.com/decc/twenty-fifty'>Code</a> to interface between the C library and the javascript in the browser.</li>
+      <li>Bespoke javascript <a href='http://gfws.greenonblack.com'>controls and charts</a>.</li>
+    </ul>
+  </section>
+
+  <section>
 
     <div class='heading-year'>2010&ndash;2015</div>
     <h3>The 2050 Calculator</h3>
 
     <figure>
-      <a class='image' href='http://2050-calculator-tool.decc.gov.uk'><img src='/Static/2050.png' /></a>
+      <a class='image' href='http://classic.2050.org.uk'><img src='/Static/2050.png' /></a>
       <figcaption>The 2050 Calculator</figcaption>
     </figure>
 
-    <p>An <a href='http://2050-calculator-tool.decc.gov.uk'>interactive site</a> that allows people to explore the future of energy in the UK: what will we use it for? where will we get it from? Written in Javascript (using jQuery, Raphael &amp; D3js), Ruby (using Sinatra) and C.</p>
+    <p>An <a href='http://classic.2050.org.uk'>interactive site</a> that allows people to explore the future of energy in the UK: what will we use it for? where will we get it from? Written in Javascript (using jQuery, Raphael &amp; D3js), Ruby (using Sinatra), Excel and C. I ran the 10 person multi-disciplinary team, developed the interactive site and some of the model.</p>
 
     <p>Key features:</p>
 
     <ul>
-      <li><a href='http://github.com/tamc/excel_to_code'>Code</a> that takes an Excel spreadsheet and turns it into an equivalent model written in C.</li>
-      <li><a href='http://github.com/decc/twenty-fifty'>Code</a> to interface between the C library and the javascript in the browser.</li>
-      <li>Bespoke javascript <a href='http://2050-calculator-tool.decc.gov.uk'>controls and charts</a>.</li>
+      <li>It won several awards, including the Civil Service award for Analysis and Use of Evidence.</li>
+      <li>The code has been forked and adapted by teams in 30 countries, including teams in the <a href='http://2050pathway.chinaenergyoutlook.org'>Chinese</a> and <a href='http://indiaenergy.gov.in'>Indian</a> governments.</li>
     </ul>
   </section>
+
 
   <section>
     <div class='heading-year'>2007&ndash;2014</div>
@@ -307,7 +350,7 @@
       <figcaption>New Media Knowledge</figcaption>
     </figure>
 
-    <p>A bespoke content management written for the New Media Knowledge organisation. Written in Ruby on Rails, backed by MySQL.</p>
+    <p>A bespoke content management written for the New Media Knowledge organisation. Written in Ruby on Rails, backed by MySQL. I developed the complete system.</p>
     
     <p>Key features:</p>
 
@@ -327,7 +370,7 @@
       <figcaption>talks.cam</figcaption>
     </figure>
 
-    <p>An <a href='http://talks.cam.ac.uk'>events listing</a> site written for the University of Cambridge, and still in use. Written using an early version of Ruby on Rails, backed by MySQL.</p>
+    <p>An <a href='http://talks.cam.ac.uk'>events listing</a> site written for the University of Cambridge, and still in use. Written using an early version of Ruby on Rails, backed by MySQL. I developed the complete system.</p>
 
     <p>Key features:</p>
 
@@ -363,7 +406,6 @@
       <li>I enjoy creating data driven visualisations: e.g.,: a <a href='http://bl.ocks.org/tamc/raw/024168df8660eeca26aa/'>CATES plot</a>, a <a href=''>Marginal Abatement Cost Curve</a>, a '<a href='http://tamc.github.io/flying-brick/'>flying brick</a>' chart, or a  <a href='http://tamc.github.io/Sankey/'>Sankey</a> diagram.</li>
       <li>I like to automate: e.g., I have <a href='https://github.com/decc/calculator-book/tree/master/public'>a script</a> that watches for changes on <a href='https://github.com/decc/calculator-book'>a github repository</a>, combines the files and uses pandoc to spit out the result as <a href='http://book.2050.org.uk'>Word, PDF and HTML</a>.</li>
       <li>I can solve optimization problems: e.g., <a href='https://github.com/decc/twenty-fifty/blob/master/model/optimiser/optimiser.c'>my genetic algorithm solver</a> in C.</li>
-      <li>I have had a go at programming applications: e.g., an iPhone application to help breastfeeding mothers, that I sold on the iPhone app store for a while.</li>
     </ul>
   </section>
 
@@ -399,7 +441,7 @@
     <li><a href='http://github.com/tamc'>http://github.com/tamc</a> &mdash; Some of my open-source code.</li>
     <li><a href='http://github.com/decc'>http://github.com/decc</a> &mdash; Some more of my open-source code.</li>
     <li><a href='http://tom.counsell.org'>http://tom.counsell.org</a> &mdash; My personal website.</li>
-    <li><a href='http://uk.linkedin.com/pub/tom-counsell/0/441/360/'>http://uk.linkedin.com/pub/tom-counsell/0/441/360/</a> &mdash; My LinkedIn profile.</li>
+    <li><a href='https://uk.linkedin.com/in/tamc2'>https://uk.linkedin.com/in/tamc2</a> &mdash; My LinkedIn profile.</li>
   </ul>
 </div>
 </body>
