--- a/public/cv.html
+++ b/public/cv.html
@@ -18,10 +18,20 @@
   <tr><td>1996&ndash;2000</td><td>University of Cambridge&mdash;BA MEng Manufacturing Engineering Tripos 1st class.</td></tr>
   <tr><td>1990&ndash;1995</td><td>Millfield School, Somerset, UK&mdash;Scholarship, 10 GCSES &amp; 4&half; A-levels at grade A.</td></tr>
 </table>
-    
-<h2>CIVIL SERVANT (2010&ndash; )</h2>
 
-<p>I have held four posts at the UK Department of Energy & Climate Change</p>
+<h2>SOFTWARE ENGINEER (2015&ndash;)</h2>
+
+<p>I help a tiny firm grow fast and make a difference to the way that children's nurseries help their charges to develop.</p>
+<p>I have rapidly developed new features that are loved by customers, eliminated niggling bugs, reviewed and improved security and talked with many customers, users and potential customers.</p>
+
+<h2>CIVIL SERVANT (2010&ndash;2015)</h2>
+
+<p>I held five posts at the UK Department of Energy & Climate Change</p>
+
+<h3>Deputy Director, Analysis</h3>
+
+<p>Reporting to the Chief Economist, I acted as an analytic trouble shooter. In particular, I helped the team move from a traditional approach of considering a few long-range energy scenarios to being able to look for the common features, level of uncertainty and interesting exceptions amongst thousands of automatically generated scenarios.</p>
+
 
 <h3>Deputy Director, International Climate Change</h3>
 
