--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -288,7 +288,7 @@
       <figcaption>Tapestry</figcaption>
     </figure>
 
-    <p>A <a href='http://tapestry.info'>website</a>, <a href=''>Android app</a> and <a href=''>iOS app</a> that children's nurseries use to plan, record and communicate how their charges develop. 7&thinsp;000 nurseries pay for the service and it contains information about 330&thinsp;000 children. The apps have 90&thinsp;000 active users a month, and the site 250&thinsp;000. Written in PHP, Javascript, Java and Objective-C. I have taken over the management of the apps and am contribute to the site.</p>
+    <p>A <a href='http://tapestry.info'>website</a>, <a href=''>Android app</a> and <a href=''>iOS app</a> that children's nurseries use to plan, record and communicate how their charges develop. 7&thinsp;000 nurseries pay for the service and it contains information about 330&thinsp;000 children. The apps have 90&thinsp;000 active users a month, and the site 250&thinsp;000. Written in PHP, Javascript, Java and Objective-C. I have taken over the management of the apps and and contribute to the site.</p>
 
     <p>Key features:</p>
 
