--- a/public/cv.html
+++ b/public/cv.html
@@ -50,7 +50,7 @@
 
 <h3>Grade 7, Assistant to the Chief Scientific Advisor</h3>
 
-<p>I was recruited to the UK Deparment of Energy and Climate Change by David MacKay, the Chief Scientific Advisor, to work in his private office. I supported him with counsel, with rapid bits of analysis, in keeping track of initiatives inside and outside of the department and represented him when he was unavailable.</p>
+<p>I was recruited to the UK Department of Energy and Climate Change by David MacKay, the Chief Scientific Advisor, to work in his private office. I supported him with counsel, with rapid bits of analysis, in keeping track of initiatives inside and outside of the department and represented him when he was unavailable.</p>
 
 <h2>STRATEGY MANAGER (2007&ndash;2010)</h2>
 
