Fix the gfws link

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 </script><noscript>&#116;&#x6f;&#x6d;&#32;&#x61;&#116;&#32;&#x63;&#x6f;&#x75;&#110;&#x73;&#x65;&#108;&#108;&#32;&#100;&#x6f;&#116;&#32;&#x6f;&#114;&#x67;</noscript>.</p>
 <h2 id="news">News</h2>
 <ol type="1">
-<li>I helped the Australian <a href="http://gfws.fe2wnetwork.org">Food, Energy, Environment and Water Network</a> turn their Excel model of Food and Water scenarios into an <a href="http://gfws.fe2wnetwork.org">interactive site</a>.</li>
+<li>I helped the Australian <a href="http://www.fe2wnetwork.org">Food, Energy, Environment and Water Network</a> turn their Excel model of Food and Water scenarios into an <a href="http://gfws.fe2wnetwork.org">interactive site</a>.</li>
 <li>I have left DECC. Not because I didn't like DECC. But because I have had enough of commuting from Brighton to London. I'm now working at a tiny local firm <a href="http://eyfs.info">that helps children's nurseries</a>,</li>
 <li>Almost my last act at DECC was to create <a href="https://www.youtube.com/watch?v=OnNwBpre3Lk">short film about how we supply and use energy in the UK</a>. It was based on a talk I gave last year in London.</li>
 <li>I don't like <a href="https://en.wikipedia.org/wiki/Marginal_abatement_cost">Marginal Abatement Cost Curves</a>, but some colleagues at DECC really do. They are also annoying to do in Excel, so I created a <a href="http://tamc.github.io/macc/">chart generator</a> to help them out.</li>
