--- a/public/programming/usermeter/index.html
+++ b/public/programming/usermeter/index.html
@@ -15,19 +15,19 @@
     <p>My boss, Steve, likes <a href='https://en.wikipedia.org/wiki/Steampunk'>steampunk</a>. He also liked the display we used to have to monitor what was going on with our servers. So, for Christmas I decided to make him an old-fashioned dial display that shows the current load on our servers. It uses the local WiFi to connect to <a href='https://aws.amazon.com/lambda/'>AWS Lambda</a> to get the current value of the relevant <a href='https://aws.amazon.com/cloudwatch/'>CloudWatch metric</a>, in our case requests/minute to our main servers.</p>
     
     <figure>
-      <img src='desk.jpg' width='500'>
+      <a href='desk.jpg'><img src='desk-small.jpg' width='500'></a>
       <figcaption>The load meter on Steve's desk behind his lamp. Boxing day, so not much load.</figcaption>
     </figure>
 
     <figure>
-      <img src='front.jpg' width='500'>
+      <a href='front.jpg'><img src='front-small.jpg' width='500'></a>
       <figcaption>This is the meter, showing 3600 requests/minute to our main servers. <br>The black cable provides power. Data is over wifi.</figcaption>
     </figure>
 
     <p>The display is an unmodified 1mA ammeter built in 1949. I got it from <a href='http://www.electrojumble.org/Meters.htm'>ElectroJumble</a>.</p>
 
     <figure>
-      <img src='back.jpg' width='500'>
+      <a href='back.jpg'><img src='back-small.jpg' width='500'></a>
       <figcaption>This is the wiring, showing a WEMOS D1 Mini wired to the ammeter inputs <br> in series with a variable resistor. The black cable is power. The gold looking <br>zig-zag is the aerial. The mess on the top of the left peg is masking tape.</figcaption>
     </figure>
 
