--- a/public/cv-programming.html
+++ b/public/cv-programming.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link href="http://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'> 
-	<title>CV Thomas Counsell April 2015 - Coding</title>
+	<title>CV Thomas Counsell November 2018 - Coding</title>
   <style>
     /* Sort out the fonts and spacing first */
     * { 
@@ -246,11 +246,11 @@
     <h3>Languages</h3>
     <ul>
       <li><a href='http://www.ruby-lang.org'>Ruby</a> &mdash; I've used this for substantial projects since 2003.</li>
-      <li><a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript'>Javascript</a>, <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>html</a> &amp; <a href='https://developer.mozilla.org/en-US/docs/Web/CSS'>css</a> &mdash; Both single-page and client-server web applications.</li>
-      <li><a href='http://www.open-std.org/jtc1/sc22/wg14/www/docs/n1570.pdf'>C</a> &mdash; I've written a few high performance routines and interfaced them with Ruby.</li>
-      <li><a href='http://www.android.com'>Java / Android</a> &mdash; I've developed moderately complex Android apps.</a></li>
-      <li><a href='http://www.apple.com/developer'>Objective-C / iOS</a> &mdash; I've developed moderately complex iOS apps.</a></li>
-      <li><a href='http://php.net'>PHP</a> &mdash; I know what I am doing.</a></li>
+      <li><a href='http://php.net'>PHP</a> &mdash; I've developed complex high availability, high volume web applications.</a></li>
+      <li><a href='https://developer.mozilla.org/en-US/docs/Web/JavaScript'>Javascript</a>, <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>html</a> &amp; <a href='https://developer.mozilla.org/en-US/docs/Web/CSS'>css</a> &mdash; Both single-page and complex client-server web applications.</li>
+      <li><a href='http://www.android.com'>Java / Android</a> &mdash; I've developed complex Android apps.</a></li>
+      <li><a href='http://www.apple.com/developer'>Objective-C / Swift / iOS</a> &mdash; I've developed complex iOS apps.</a></li>
+      <li><a href='http://www.open-std.org/jtc1/sc22/wg14/www/docs/n1570.pdf'>C</a>, <a href='https://golang.org'>Go</a> &mdash; I've written a few high performance routines and small projects.</li>
     </ul>
   </section>
 
@@ -260,6 +260,7 @@
     <ul>
       <li><a href='http://d3js.org'>d3.js</a> &mdash; I've used this since 2011 to produce complex interactive charts.</li>
       <li><a href='http://www.sinatrarb.com'>Sinatra</a> and (older versions of) <a href='http://rubyonrails.org'>Rails</a> &mdash; I've produced substantial production web apps.</li>
+      <li><a href='http://www.laravel.com'>Laravel</a> &mdash; I've produced substantial production web apps.</li>
     </ul>
   </section>
 
@@ -267,20 +268,21 @@
     <h3>Tools & Applications</h3>
 
     <ul>
-      <li><a href='http://git-scm.com'>Git</a> &amp; <a href='http://github.com'>GitHub</a> &mdash; I use them every day.</li>
-      <li><a href=''>Web servers</a> &mdash; I have set up and maintained Ubuntu servers.</li>
-      <li><a href='http://aws.amazon.com'>AWS</a> &mdash; I have used EC2, auto-scaling, load balancers, S3, CloudFront and Route 53.</li>
-      <li><a href='http://www.postgresql.org'>Postgres</a> &amp; <a href=''>MySQL</a> &mdash; I have used both in customer web applications.</li>
+      <li><a href='http://aws.amazon.com'>AWS</a> &mdash; I have managed high volume, high availability sites used EC2, spot fleets, auto-scaling, load balancers, S3, CloudFront, SQS, SES, CloudFormation, and Route 53. I have designed high availability and high security architectures. I have written custom tooling to interface with AWS systems.</li>
+      <li><a href=''>Web servers</a> &mdash; I have set up and maintained many servers.</li>
+      <li><a href='http://www.postgresql.org'>Postgres</a> &amp; <a href=''>MySQL</a> &mdash; I have used both in large customer web applications. I know how to optimise performance and design effective data structures.</li>
       <li><a href='https://www.mongodb.org'>mongoDB</a> &amp; <a href='https://www.firebase.com'>Firebase</a> &mdash; I have used both for small applications.</li>
-      <li><a href='http://www.ecma-international.org/publications/standards/Ecma-376.htm'>Excel</a> &mdash; I know how its file format works and how to interface it with other systems.</li>
+      <li><a href='http://www.ecma-international.org/publications/standards/Ecma-376.htm'>Excel</a> &mdash; I know how its file format works and how to interface it with other systems. I have written code that translates Excel to and from other programming languages.</li>
+      <li>Scripting languages &mdash; I've automated a range of processes both simple and complex: continuous deployment; test pipelines; issue management; security checking; data management. 
       <li><a href='http://www.vim.org'>VIM</a> &mdash; I use it every day.</li>
+      <li><a href='http://git-scm.com'>Git</a> &amp; <a href='http://github.com'>GitHub</a> &mdash; I use them every day.</li>
     </ul>
   </section>
 
   <h2>Projects delivered</h2>
 
   <section>
-  <div class='heading-year'>2015&ndash;</div>
+  <div class='heading-year'>2015&ndash;Today</div>
     <h3>Tapestry</h3>
 
     <figure>
@@ -288,16 +290,40 @@
       <figcaption>Tapestry</figcaption>
     </figure>
 
-    <p>A <a href='http://tapestry.info'>website</a>, <a href=''>Android app</a> and <a href=''>iOS app</a> that children's nurseries use to plan, record and communicate how their charges develop. 7&thinsp;000 nurseries pay for the service and it contains information about 330&thinsp;000 children. The apps have 90&thinsp;000 active users a month, and the site 250&thinsp;000. Written in PHP, Javascript, Java and Objective-C. I have taken over the management of the apps and and contribute to the site.</p>
+    <p>A <a href='http://tapestry.info'>website</a>, <a href=''>Android app</a> and <a href=''>iOS app</a> that children's nurseries use to plan, record and communicate how their charges develop. More than 16&thinsp;000 schools and nurseries pay for the service. </p>
+    
+    <p>It contains structured and unstructured data, pictures and videos relating to more than 800&thinsp;000 children and has more than 900 000 active users. Written in PHP, Javascript, Java and Swift and hosted on AWS.</p>
+    
+    <p>I managed bringing app development in-house; managed the migration to the cloud; managed the process of complying with the GDPR; developed tooling and processing to cope with growth in demand and in team-size; designed a substantial part of the architecture and contributed code and to all parts of the site and apps.</p>
 
     <p>Key features:</p>
 
     <ul>
-      <li>A requirement for high security and uptime.</li>
+      <li>A requirement for high security and reliability.</li>
       <li>A complex legacy, multi-author codebase.</li>
+      <li>Smooth scaling to cope with more than 4 times the load without customer's noticing.</li>
+      <li>Daily deployment of improvements, without downtime.</li>
     </ul>
   </section>
 
+  <section>
+  <div class='heading-year'>2018</div>
+    <h3>Net Zero 2050</h3>
+
+    <figure>
+      <a class='image' href='https://stakeholder.netzero2050.eu'><img src='/Static/NetZero2050.png' /></a>
+      <figcaption>Net Zero 2050</figcaption>
+    </figure>
+
+    <p>An <a href='https://stakeholder.netzero2050.eu'>interactive site</a> that allows people to explore the future of energy in the EU: what will we use it for? where will we get it from? A massively more complex extension of the UK model I developed 2010-2015 and described below. Written in Javascript (using jD3js), Go, Excel and C. Deployed on serverless infrastructure. I developed the architecture and tooling and provided coaching, trouble-shooting and support to the multi-disciplinary team.</p>
+
+    <p>Key features:</p>
+
+    <ul>
+      <li>Based on the automatic translation of a very complex, multi-author, very large Excel model into C interfaced with Go.</li>
+      <li>Running on an auto-scaling serverless infrastructure to support highly variable peak loads at the lowest possible cost and maintenance overhead.</li>
+    </ul>
+  </section>
 
   <section>
   <div class='heading-year'>2015</div>
@@ -441,7 +467,6 @@
     <li><a href='http://github.com/tamc'>http://github.com/tamc</a> &mdash; Some of my open-source code.</li>
     <li><a href='http://github.com/decc'>http://github.com/decc</a> &mdash; Some more of my open-source code.</li>
     <li><a href='http://tom.counsell.org'>http://tom.counsell.org</a> &mdash; My personal website.</li>
-    <li><a href='https://uk.linkedin.com/in/tamc2'>https://uk.linkedin.com/in/tamc2</a> &mdash; My LinkedIn profile.</li>
   </ul>
 </div>
 </body>
