--- a/public/cv.html
+++ b/public/cv.html
@@ -3,7 +3,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="cv.css" media="screen" rel="stylesheet" type="text/css"></link>
 	<link href="cv.css" media="print" rel="stylesheet" type="text/css"></link>
-	<title>CV Thomas Counsell April 2015</title>
+	<title>CV Thomas Counsell November 2018</title>
 </head>
 <body>
 <h1>Dr Thomas Counsell</h1> 
@@ -22,7 +22,12 @@
 <h2>SOFTWARE ENGINEER (2015&ndash;)</h2>
 
 <p>I help a tiny firm grow fast and make a difference to the way that children's nurseries help their charges to develop.</p>
-<p>I have rapidly developed new features that are loved by customers, eliminated niggling bugs, reviewed and improved security and talked with many customers, users and potential customers.</p>
+
+<p>I have: managed their transition to the cloud, allowing them to double in size while improving performance and reliability; managed their approach to dealing with GDPR compliance, delivering the `best work they have seen` in the eyes of several of our customer's data protection officers; improved the software development processes to continuously deliver the right improvements as the size of the team has grown; supported the founders in making difficult decisions around pricing and international expansion.</p>
+
+<h2>CONSULTANT (2015&ndash;)</h2>
+
+<p>In my spare time I provide advice and hands-on support to several groups: to fix troublesome analysis so that it provides useful answers and to present the results in a way that is engaging and useful. I have particular expertise in turning Excel based analysis into interactive online tools.</p>
 
 <h2>CIVIL SERVANT (2010&ndash;2015)</h2>
 
