--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@ document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\
 <h2 id="elsewhere-on-the-internet">Elsewhere on the internet</h2>
 <ul>
 <li><a href="https://github.com/tamc">tamc on github</a></li>
-<li><del><a href="http://uk.linkedin.com/pub/tom-counsell/0/441/360/">Tom Counsell on linkedin</a></del> &mdash; not any more./li>
+<li><del><a href="http://uk.linkedin.com/pub/tom-counsell/0/441/360/">Tom Counsell on linkedin</a></del> &mdash; not any more.</li>
 </ul>
 </body>
 </html>
